# OpenClawTest

./: .gitignore  README.md  TASKS.md  pyproject.toml
configs/: default.toml
src/llm_trainer/: __init__.py  app_logic.py  background.py  cli.py  config.py  data.py  dataloader.py  device.py  generation.py  model.py  run_metadata.py  telemetry.py  tokenization.py  trainer.py  tui.py
tests/: test_cli.py  test_cli_runtime.py  test_config.py  test_data.py  test_device.py  test_model.py  test_run_metadata.py  test_smoke.py  test_telemetry.py  test_tokenization_dataloader.py  test_trainer.py  test_tui.py  test_tui_integration.py
